--- a/homepage.html
+++ b/homepage.html
@@ -148,5 +148,189 @@
 
 
      <!-- Feature products ends here -->
+
+    <!-- Top Products Starts Here -->
+
+      <div class="top-products">
+        <h4> Top Products</h4>
+        <ul>
+            <li>All</li>
+            <li>Headphones</li>
+            <li>Earbuds</li>
+            <li>Earphones</li>
+            <li>Neckbands</li>
+        </ul>
+        <div class="top-products-cards">
+            <div class="top-product">
+                <img src="/images/Products/jbl660nc-1.png" alt="JBL 600NC">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>JBL Live 660NC</h6>
+                    <p>Wireless Over-Ear NC Headphones</p>,
+                    <hr>
+                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <button class="add-btn">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product">
+                <img src="/images/Products/boat518-1.png" alt="boat">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>boAt Rockerz</h6>
+                    <p>On-Ear Wireless Headphones</p>
+                    <hr>
+                    <p class="price">$1,299 <span><strike>$3,990</strike></span></p>
+                    <button class="add-btn">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product">
+                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>JBL Live 660NC</h6>
+                    <p>Wireless Over-Ear NC Headphones</p>
+                    <hr>
+                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <button class="add-btn">Add ro Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product">
+                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>JBL Live 660NC</h6>
+                    <p>Wireless Over-Ear NC Headphones</p>
+                    <hr>
+                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <button class="add-btn">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product">
+                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>JBL Live 660NC</h6>
+                    <p>Wireless Over-Ear NC Headphones</p>
+                    <hr>
+                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <button class="add-btn">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product">
+                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>JBL Live 660NC</h6>
+                    <p>Wireless Over-Ear NC Headphones</p>
+                    <hr>
+                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <button class="add-btn">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product">
+                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                            class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>JBL Live 660NC</h6>
+                    <p>Wireless Over-Ear NC Headphones</p>
+                    <hr>
+                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <button class="add-btn">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product">
+                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>JBL Live 660NC</h6>
+                    <p>Wireless Over-Ear NC Headphones</p>
+                    <hr>
+                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <button class="add-btn">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product">
+                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>JBL Live 660NC</h6>
+                    <p>Wireless Over-Ear NC Headphones</p>
+                    <hr>
+                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <button class="add-btn">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product">
+                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>JBL Live 660NC</h6>
+                    <p>Wireless Over-Ear NC Headphones</p>
+                    <hr>
+                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <button class="add-btn">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product">
+                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <div class="desc">
+                    <div class="rating">
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+                    <h6>JBL Live 660NC</h6>
+                    <p>Wireless Over-Ear NC Headphones</p>
+                    <hr>
+                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <button class="add-btn">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="top-product browse-card">
+                <p>Browse All Products <i class="fa-solid fa-arrow-right-long"></i></p>
+            </div>
+        </div>
+    </div>
+
+ <!-- Top Products Ends Here -->
 </body>
 </html>
