--- a/homepage.html
+++ b/homepage.html
@@ -191,136 +191,136 @@
             </div>
 
             <div class="top-product">
-                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <img src="/images/Products/boat110-1.png" alt="boat">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>JBL Live 660NC</h6>
-                    <p>Wireless Over-Ear NC Headphones</p>
+                    <h6>boAt Airdopes</h6>
+                    <p>Wireless In-Ear Earbuds</p>
                     <hr>
-                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <p class="price">$1,099<span><strike>$2990</strike></span></p>
                     <button class="add-btn">Add ro Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <img src="/images/Products/boat110-1.png" alt="boat">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>JBL Live 660NC</h6>
-                    <p>Wireless Over-Ear NC Headphones</p>
+                    <h6>boAt BassHeada 110</h6>
+                    <p>In-Ear Wired Headphones</p>
                     <hr>
-                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <p class="price">$499<span><strike>$999</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <img src="/images/Products/boat410-1.png" alt="boat">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>JBL Live 660NC</h6>
-                    <p>Wireless Over-Ear NC Headphones</p>
+                    <h6>boAt Rockerz 410</h6>
+                    <p>Bluetooth & Wired On-Ear Headphones</p>
                     <hr>
-                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <p class="price">$1,599<span><strike>$2,990 </strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <img src="/images/Products/jbl200bt-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>JBL Live 660NC</h6>
-                    <p>Wireless Over-Ear NC Headphones</p>
+                    <h6>JBL Live 200BT</h6>
+                    <p>In-Ear Wireless Neckbands</p>
                     <hr>
-                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <p class="price">$3,699 <span><strike>$5,299</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <img src="/images/Products/sonyXb910n-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                     </div>
-                    <h6>JBL Live 660NC</h6>
-                    <p>Wireless Over-Ear NC Headphones</p>
+                    <h6>Sony WH-XB910N</h6>
+                    <p>Wireless Over-Ear Headphones</p>
                     <hr>
-                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <p class="price">$13,489<span><strike>$5,999</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <img src="/images/Products/jbl760nc-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>JBL Live 660NC</h6>
+                    <h6>JBL Tune 760NC</h6>
                     <p>Wireless Over-Ear NC Headphones</p>
                     <hr>
-                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <p class="price">$5,999<span><strike>$7,999</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <img src="/images/Products/boat255r-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>JBL Live 660NC</h6>
-                    <p>Wireless Over-Ear NC Headphones</p>
+                    <h6>boAt Rockerz 255</h6>
+                    <p>In-Ear Wireless Neckbands</p>
                     <hr>
-                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <p class="price">$899 <span><strike>$2,990</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <img src="/images/Products/jbl100-1.png" alt="JBL ">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>JBL Live 660NC</h6>
-                    <p>Wireless Over-Ear NC Headphones</p>
+                    <h6>JBL Wave 100</h6>
+                    <p> In-Ear Truly Wireless Earbuds</p>
                     <hr>
-                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <p class="price">$2,999 <span><strike>$6,999</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="../images/products/jbl660nc-1.png" alt="JBL 600NC">
+                <img src="/images/Products/sony1000xm4-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>JBL Live 660NC</h6>
-                    <p>Wireless Over-Ear NC Headphones</p>
+                    <h6>Sony WF-1000XM4</h6>
+                    <p>Wireless In-Ear NC Headphones</p>
                     <hr>
-                    <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
+                    <p class="price">$19,990 <span><strike>$24,999</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
@@ -332,5 +332,116 @@
     </div>
 
  <!-- Top Products Ends Here -->
+
+ <!-- Our Advantages Starts Here -->
+
+  <div class="advantages">
+    <h2>Our Advantages</h2>
+     <div class="fonticon ">
+      <div class="delivery">
+        <i class="fa-solid fa-truck-fast"></i>
+        <div>
+            <h5>Express Delivery</h5>
+            <p>Ships in 24 Hours</p>
+        </div>
+      </div>
+
+      <div class="delivery">
+       <i class="fa-solid fa-shield-halved"></i>
+        <div>
+            <h5>Brand Warranty</h5>
+            <p>100% Original Products</p>
+        </div>
+      </div>
+
+      <div class="delivery">
+        <i class="fa-solid fa-tags"></i>
+        <div>
+            <h5>Exciting Deals</h5>
+            <p>On all prepaid orders</p>
+        </div>
+      </div>
+
+      <div class="delivery">
+        <i class="fa-solid fa-credit-card"></i>
+        <div>
+            <h5>Secure Payments</h5>
+            <p>SSL/Secure certificate</p>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
+
+  <!-- Our Advantages Ends Here -->
+
+  <!-- Footer Starts Here -->
+
+  <div class="footer">
+    <div class="footerstart">
+      <div class="content">
+        <h3>Tech-Shop</h3>
+        <p>Subscribe to  our Email alerts to receive early discount offers, and new products info.</p>
+        <input type="email" placeholder="email Address*">
+        <button>Subscribe</button>
+      </div>
+      <div class="content">
+
+        <ul type="none">
+          <h5>Help</h5>
+          <li>FAQs</li>
+          <li>Track Order</li>
+          <li>Cancel Order</li>
+          <li>Return Order</li>
+          <li>Warranty info</li>
+        </ul>
+      </div>
+      <div class="content">
+        <ul type="none">
+          <h5>Policies</h5>
+          <li>Return Policy</li>
+          <li>Security</li>
+          <li>Sitemap</li>
+          <li>Privacy Policy</li>
+          <li>Terms & Conditions</li>
+        </ul>
+      </div>
+      <div class="content">
+         <ul type="none">
+          <h5>Company</h5>
+          <li>About Us</li>
+          <li>Contact Us</li>
+          <li>Service Centers</li>
+          <li>Careers</li>
+          <li>Affiliates</li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+    <div class="footerend">
+
+      <div class="copyrights"> <p>2024 | All Rights Reserved. Built by| CHANDA ARUNASRI</p></div>
+        <div class="footerfonts">
+          <div class="facebook-icon">
+            <i class="fa-brands fa-facebook"></i>
+          </div>
+          <div class="twitter-icon">
+            <i class="fa-brands fa-twitter"></i>
+          </div>
+          <div class="insta-icon">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+          <div class="linked-icon">            
+            <i class="fa-brands fa-linkedin"></i>
+          </div>
+        </div>
+    </div>
+  </div>
+
+
+  <!-- footer ends here -->
+
 </body>
 </html>
