--- a/homepage.html
+++ b/homepage.html
@@ -168,7 +168,7 @@
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                     </div>
                     <h6>JBL Live 660NC</h6>
-                    <p>Wireless Over-Ear NC Headphones</p>,
+                    <p>Wireless Over-Ear NC Headphones</p>
                     <hr>
                     <p class="price">$9,999 <span><strike>$14,999</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
@@ -377,9 +377,11 @@
 
   <!-- Our Advantages Ends Here -->
 
+ 
   <!-- Footer Starts Here -->
 
-  <div class="footer">
+
+   <div class="footer">
     <div class="footerstart">
       <div class="content">
         <h3>Tech-Shop</h3>
@@ -425,7 +427,7 @@
       <div class="copyrights"> <p>2024 | All Rights Reserved. Built by| CHANDA ARUNASRI</p></div>
         <div class="footerfonts">
           <div class="facebook-icon">
-            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-facebook-f"></i>
           </div>
           <div class="twitter-icon">
             <i class="fa-brands fa-twitter"></i>
@@ -434,14 +436,17 @@
             <i class="fa-brands fa-instagram"></i>
           </div>
           <div class="linked-icon">            
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
           </div>
         </div>
     </div>
   </div>
 
 
+
   <!-- footer ends here -->
+
+  <script  height="100px" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
 </body>
 </html>
