--- a/productdetails/index.html
+++ b/productdetails/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>product details</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -156,13 +156,13 @@
     <!-- products details ends here -->
 
 
-    <!-- specifications starts here -->
+     <!-- specifications starts here -->
 
 
     <div class="specifications">
         <div class="specify">
             <ul class="list" type="none">
-                <li id="speci">Specification</li>
+                <li id="specif">Specification</li>
                 <li>Overview</li>
                 <li>Reviews</li>
             </ul>
@@ -255,7 +255,7 @@
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h2>Sony WH-XB 910N</h2>
+                    <h2>Sony WH-XB910N</h2>
                     <p>Wireless Over-Ear  Headphones</p>
                     <hr>
                     <pre class="price"><span>₹13,489 </span><strike>₹19,990</strike></pre>
