--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>Add commentMore actions
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script  height="100px" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -39,7 +40,8 @@
     </header>
     <!-- navbar ends here -->
      
-     <!--carosel , Hero Section HTML -->
+    <!--carosel , Hero Section HTML -->
+
      <section class="hero-section">
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -101,53 +103,40 @@
 <!-- carosel,hero section ends here -->
 
 
-<!-- Featured products starts here -->
-     <div class="featuredproducts">
-      <h2>Featured Products</h2>
-
-     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-
-
-         </div>
-        <div class="featureheading" >  
-
-            <div class="featuredcards">
-              <h4>JBL Endurance Run Sports</h4>
-              <img src="/images/Products/jbl-endu-1.png" alt="">
-               <pre><span class="price"> ₹13,489 </span><strike>₹19,990</strike></pre>
-            </div>
-            <div class="featuredcards">
-              <h4>boAt Airdopes 203</h4>
-              <img src="/images/Products/boat203-1.png" alt="">
-               <pre><span class="price"> ₹13,489 </span><strike>₹19,990</strike></pre>
-            </div >
-            <div class="featuredcards">
-              <h4>boAt Rockerz 518</h4>
-              <img src="/images/Products/boat518-1.png" alt="">
-               <pre><span class="price"> ₹13,489 </span><strike>₹19,990</strike></pre>
-            </div>
-            <div class="featuredcards">
-              <h4>JBL Tune 760NC</h4>
-              <img src="/images/Products/boat518-1.png" alt="">
-               <pre><span class="price"> ₹13,489 </span><strike>₹19,990</strike></pre>
-            </div>
-            <div class="featuredcards">
-              <h4>boAt Rockerz 255</h4>
-              <img src="/images/Products/boat255r-1.png" alt="">
-               <pre><span class="price"> ₹13,489 </span><strike>₹19,990</strike></pre>
-            </div>
+<div class="featured-products">
+    <h4>Featured Products</h4>
+    <div class="product-cards" id="productSlider">
+        <div class="card">
+            <h5>JBL Endurance Run Sports</h5>
+            <img src="/images/products/jbl-endu-1.png" alt="JBL Endurance">
+            <p>₹999 <span><strike>₹1,599</strike></span></p>
         </div>
-      </div>
-     </div>
+        <div class="card">
+            <h5>boAt Airdopes 203</h5>
+            <img src="../images/products/boat203-1.png" alt="boat Rockerz">
+            <p>₹1,074 <span><strike>₹3,999</strike></span></p>
+        </div>
+        <div class="card">
+            <h5>boAt Rockerz 518</h5>
+            <img src="../images/products/boat518-1.png" alt="boat Rockerz">
+            <p>₹299 <span><strike>₹499</strike></span></p>
+        </div>
+        <div class="card">
+            <h5>JBL Tune 760NC</h5>
+            <img src="../images/products/jbl760nc-1.png" alt="JBL Tune">
+            <p>₹5,999 <span><strike>₹7,999</strike></span></p>
+        </div>
+        <div class="card">
+            <h5>boAt Rockerz 255</h5>
+            <img src="../images/products/boat255r-1.png" alt="boAt Rockerz">
+            <p>₹899 <span><strike>₹2,990</strike></span></p>
+        </div>
+    </div>
 
-
-     <!-- Feature products ends here -->
+    <div class="indicators">
+        <button></button><button></button><button></button><button></button><button></button>
+    </div>
+</div>
 
     <!-- Top Products Starts Here -->
 
@@ -191,16 +180,16 @@
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/boat110-1.png" alt="boat">
+                <img src="/images/Products/boat131-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h6>boAt Airdopes</h6>
+                    <h6>boAt Airpodes 131</h6>
                     <p>Wireless In-Ear Earbuds</p>
                     <hr>
-                    <p class="price">$1,099<span><strike>$2990</strike></span></p>
+                    <p class="price">₹1,099 <span><strike>₹2,990</strike></span></p>
                     <button class="add-btn">Add ro Cart</button>
                 </div>
             </div>
@@ -446,7 +435,60 @@
 
   <!-- footer ends here -->
 
-  <script  height="100px" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script>
+    const slider = document.getElementById('productSlider');
+    const visibleCount = 5;
+    let cards = Array.from(slider.children);
 
+    // Duplicate for seamless loop
+    cards.forEach(card => slider.appendChild(card.cloneNode(true)));
+
+    let allCards = Array.from(slider.children);
+    let currentIndex = visibleCount;
+
+    function updateSliderPosition() {
+        const cardWidth = allCards[0].offsetWidth + 20; // card + margin
+        const offset = currentIndex - Math.floor(visibleCount / 2);
+        slider.style.transform = translateX(${-offset * cardWidth}px);
+    }
+
+    function updateCardClasses() {
+        allCards.forEach((card, i) => {
+            card.classList.remove('active', 'medium');
+            if (i === currentIndex) {
+                card.classList.add('active');
+            } else if (i === currentIndex - 1 || i === currentIndex + 1) {
+                card.classList.add('medium');
+            }
+        });
+    }
+
+    function slideLeftToRight() {
+        currentIndex++;
+        if (currentIndex >= allCards.length - visibleCount) {
+            slider.style.transition = 'none';
+            currentIndex = visibleCount;
+            updateSliderPosition();
+
+            requestAnimationFrame(() => {
+                requestAnimationFrame(() => {
+                    slider.style.transition = 'transform 0.6s ease';
+                    currentIndex++;
+                    updateSliderPosition();
+                    updateCardClasses();
+                });
+            });
+        } else {
+            updateSliderPosition();
+            updateCardClasses();
+        }
+    }
+
+    // Init styles and animation
+    slider.style.transition = 'transform 0.6s ease';
+    updateSliderPosition();
+    updateCardClasses();
+    setInterval(slideLeftToRight, 2000);
+</script>
 </body>
 </html>
