--- a/productdetails/index.html
+++ b/productdetails/index.html
@@ -120,7 +120,7 @@
                 <hr>
                 <div class="middle">
                     <div class="middlefirst">
-                    <pre class="price"><span>$9,999 </span><strike>$14,999</strike></pre>
+                    <pre class="price"><span>₹9,999 </span><strike>₹14,999</strike></pre>
                     <p >You save:<i class="fa-solid fa-indian-rupee-sign"></i>5000 (33%)</p>
                     <p id="taxes">(Inclusive of all taxes)</p>
                     </div>
@@ -155,14 +155,13 @@
     
     <!-- products details ends here -->
 
-
      <!-- specifications starts here -->
 
 
     <div class="specifications">
         <div class="specify">
             <ul class="list" type="none">
-                <li id="specif">Specification</li>
+                <li id="speci">Specification</li>
                 <li>Overview</li>
                 <li>Reviews</li>
             </ul>
@@ -194,7 +193,6 @@
     <!-- specifications ends here -->
 
 
-
     <!-- Related  Products -->
 
     <div >
@@ -202,67 +200,66 @@
             <h2>Related Products</h2>
         </div>
 
-        <div class="top-products-cards">
-             <div class="top-product">
-                <img src="/images/Products/jbl660nc-1.png" alt="JBL ">
+       <div class="top-products-cards">
+            <div class="top-product">
+                <img src="/images/Products/jbl660nc-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
-                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
-                            class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                     </div>
-                    <h2>JBL Live 660NC</h2>
+                    <h6>JBL Live 660NC</h6>
                     <p>Wireless Over-Ear NC Headphones</p>
                     <hr>
-                    <pre> <span>₹9,999 </span><strike>₹14,999</strike></pre>
+                    <p class="price">₹9,999 <span><strike>₹14,999</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
-             </div>
+            </div>
 
-             <div class="top-product">
-                <img src="/images/Products/boat518-1.png" alt="JBL 600NC">
+            <div class="top-product">
+                <img src="/images/Products/boat518-1.png" alt="boat">
                 <div class="desc">
                     <div class="rating">
-                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h2>boAt Rockerz 518</h2>
+                    <h6>boAt Rockerz</h6>
                     <p>On-Ear Wireless Headphones</p>
                     <hr>
-                    <pre> <span>₹1,299 </span><strike>₹3,990</strike></pre>
+                    <p class="price">₹1,299 <span><strike>₹3,990</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/boat410-1.png" alt="boat410-1">
+                <img src="/images/Products/boat410-1.png" alt="JBL 600NC">
                 <div class="desc">
                     <div class="rating">
-                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h2>boAt Rockerz 410</h2>
-                    <p>On-Ear wireless Headphones</p>
+                    <h6>boAt Rockerz 410</h6>
+                    <p>Bluetooth & Wired On-Ear Headphones</p>
                     <hr>
-                   <pre> <span>₹1,599 </span><strike>₹2,990</strike></pre>
-                    <button class="add-btn">Add to Cart</button>
+                    <p class="price">₹1,599 <span><strike>₹2,990</strike></span></p>
+                    <button class="add-btn">Add ro Cart</button>
                 </div>
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/sonyXb910n-1.png" alt="JBL 600NC">
+                <img src="/images/Products/sonyXb910n-1.png" alt="boat">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
                             class="fa-regular fa-star"></i>
                     </div>
-                    <h2>Sony WH-XB910N</h2>
-                    <p>Wireless Over-Ear  Headphones</p>
+                    <h6>Sony WH-XB910N</h6>
+                    <p>Wireless Over-Ear Headphones</p>
                     <hr>
-                    <pre class="price"><span>₹13,489 </span><strike>₹19,990</strike></pre>
+                    <p class="price">₹13,489<span><strike>₹19,990</strike></span></p>
                     <button class="add-btn">Add to Cart</button>
                 </div>
             </div>
-        </div>
+
 
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
