--- a/cartpage/index.html
+++ b/cartpage/index.html
@@ -53,11 +53,11 @@
         <div class="mediaboxes">
             <p class="fb">Facebook</p> 
             <p class="goo">Google</p> 
-            <p class="twit">twitter</p> 
+            <p class="twi">twitter</p> 
         </div>
     </div>  
     <!-- login page ends here -->
-     
+
     <!-- signin page starts here -->
          <div class="signin" id="signup">
           <a href="">x</a>
@@ -74,7 +74,7 @@
             <div class="mediaboxes">
                 <p class="fb">Facebook</p> 
                 <p class="goo">Google</p> 
-                <p class="twit">twitter</p> 
+                <p class="twi">twitter</p> 
             </div>
           </div> 
     <!-- sign in page ends here -->
@@ -97,7 +97,7 @@
             </div>
             <hr>
             <div class="cart-item">
-                <img src="/images/products/boat518-1.png" alt="boAt Rockerz 518">
+                <img src="/images/Products/boat518-1.png" alt="boAt Rockerz 518">
                 <div>
                     <p>boAt Rockerz 518 On-Ear Wireless Headphones</p>
                     <p>₹1,299 <span><strike>₹3,990</strike></span></p>
@@ -111,7 +111,7 @@
             </div>
             <hr>
             <div class="cart-item">
-                <img src="/images/products/boat131-1.png" alt="boAt Airdopes 131">
+                <img src="/images/Products/boat131-1.png" alt="boAt Airdopes 131">
                 <div>
                     <p>boAt Airdopes 131 Wireless In-Ear Earbuds</p>
                     <p>₹1,099 <span><strike>₹2,990</strike></span></p>
@@ -125,7 +125,7 @@
             </div>
             <hr>
             <div class="cart-item">
-                <img src="/images/products/boat110-1.png" alt="boAt 110">
+                <img src="/images/Products/boat110-1.png" alt="boAt 110">
                 <div>
                     <p>boAt Bassheads 110 In-Ear Wired Earphones</p>
                     <p>₹499 <span><strike>₹999</strike></span></p>
@@ -142,10 +142,10 @@
         <div class="summary">
             <h4>Order Summary (4 Items)</h4>
             <p class="original">Original Price <span>₹22,978</span></p>
-            <p class="discount">Discount <span>-₹10,082</span></p>
+            <p class="discount">Discount <span>-₹10,132</span></p>
             <p class="delivery">Delivery <span>Free</span></p>
             <hr>
-            <h5>Total Price <span>₹12,896</span></h5>
+            <h5>Total Price <span>₹12,846</span></h5>
             <button class="checkout-btn">Checkout</button>
         </div>
     </main>
