--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>Add commentMore actions
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,7 +22,7 @@
                      <p class="tool-tip">Search</p>
                 </div>
                 <div class="cart-icon">
-                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                     <a href="/cartpage/index.html"><i class="fa-solid fa-cart-shopping"></i></a>
                      <p class="tool-tip">Cart</p>
                 </div>
                 <div class="profile-icon">
@@ -51,7 +51,7 @@
     </div>
 
     <div class="carousel-inner">
-     <!-- Slide 1 -->More actions
+     <!-- Slide 1 --> 
       <div class="carousel-item active">
         <div class="hero-content">
           <div class="text-content">
@@ -103,33 +103,33 @@
 <!-- carosel,hero section ends here -->
 
 
-<<div class="featured-products">
+<div class="featured-products">
     <h4>Featured Products</h4>
 
     <div class="product-cards" id="productSlider">
         <div class="card">
             <h5>JBL Endurance Run Sports</h5>
-            <img src="/images/products/jbl-endu-1.png" alt="JBL Endurance">
+            <img src="/images/products/jbl-endu-1.png" alt="jbl">
             <p>₹999 <span><strike>₹1,599</strike></span></p>
         </div>
         <div class="card">
             <h5>boAt Airdopes 203</h5>
-            <img src="../images/products/boat203-1.png" alt="boAt Rockerz">
+            <img src="/images/Products/boat203-1.png" alt="boAt Rockerz">
             <p>₹1,074 <span><strike>₹3,999</strike></span></p>
         </div>
         <div class="card">
             <h5>boAt Rockerz 518</h5>
-            <img src="../images/products/boat518-1.png" alt="boAt Rockerz">
+            <img src="/images/Products/boat518-1.png" alt="boAt Rockerz">
             <p>₹299 <span><strike>₹499</strike></span></p>
         </div>
         <div class="card">
             <h5>JBL Tune 760NC</h5>
-            <img src="../images/products/jbl760nc-1.png" alt="JBL Tune">
+            <img src="/images/Products/jbl760nc-1.png" alt="JBL Tune">
             <p>₹5,999 <span><strike>₹7,999</strike></span></p>
         </div>
         <div class="card">
             <h5>boAt Rockerz 255</h5>
-            <img src="../images/products/boat255r-1.png" alt="boAt Rockerz">
+            <img src="/images/Products/boat255r-1.png" alt="boat255r-1">
             <p>₹899 <span><strike>₹2,990</strike></span></p>
         </div>
     </div>
@@ -154,7 +154,7 @@
         </ul>
         <div class="top-products-cards">
             <div class="top-product">
-                <a href="/Components/productpage.html"><img src="/images/Products/jbl660nc-1.png" alt="JBL 600NC"></a>
+                <a href="/productdetails/index.html"><img src="/images/Products/jbl660nc-1.png" alt="JBL 600NC"></a>
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
@@ -214,7 +214,7 @@
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/boat410-1.png" alt="JBL 600NC">
+                <img src="/images/Products/boat410-1.png" alt="boat410-1">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
@@ -229,7 +229,7 @@
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/jbl200bt-1.png" alt="JBL 600NC">
+                <img src="/images/Products/jbl200bt-1.png" alt="jbl200bt-1">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
@@ -244,7 +244,7 @@
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/sonyXb910n-1.png" alt="JBL 600NC">
+                <img src="/images/Products/sonyXb910n-1.png" alt="sonyXb910n-1">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
@@ -260,7 +260,7 @@
 
 
             <div class="top-product">
-                <img src="/images/Products/jbl760nc-1.png" alt="JBL 760NC">
+                <img src="/images/Products/jbl760nc-1.png" alt="jbl760nc-1">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
@@ -275,7 +275,7 @@
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/boat255r-1.png" alt="JBL 600NC">
+                <img src="/images/Products/boat255r-1.png" alt="boat255r-1">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
@@ -290,7 +290,7 @@
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/jbl100-1.png" alt="JBL 600NC">
+                <img src="/images/Products/jbl100-1.png" alt="jbl100-1">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
@@ -305,7 +305,7 @@
             </div>
 
             <div class="top-product">
-                <img src="/images/Products/sony1000xm4-1.png" alt="JBL 600NC">
+                <img src="/images/Products/sony1000xm4-1.png" alt="sony1000xm4-1">
                 <div class="desc">
                     <div class="rating">
                         <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i
