--- a/productdetails/index.html
+++ b/productdetails/index.html
@@ -65,7 +65,7 @@
             <input type="text" placeholder="Username">
             <input type="email" placeholder="Email">
             <input type="password" placeholder="Password">
-            <input type="password" placeholder="Confirm Password">
+            <input type="password" placeholder="Conform Password">
             <button>Signup</button>
             <div class="separate">
                 <span>or login with<br></span>
